Adding Animations and Responsive Typography

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
   <!-- Ours Styles -->
   <link rel="stylesheet" href="./css/style.css">
+
+  <!-- Animate CSS -->
+  <link rel="stylesheet" href="./css/animate.css">
   
   <title>Eventrade</title>
 </head>
@@ -55,41 +58,41 @@
 </nav>
 
 <header class="jumbotron paral paralsec d-flex flex-column justify-content-center">
-  <h1 class="text-center display-1" style="font-family: AgencyFb;">EVENTOS</h1>
-  <p class="lead text-center display-4 mb-4" style="font-family: Coolvetica;">que</p>
-  <p class="lead text-center display-4 mt-3" style="font-family: AlKisah;" >Emocionan</p>
+  <h1 class="text-center display-1 os-animation" data-os-animation="bounceInUp" data-os-animation-delay=".2s" style="font-family: AgencyFb;">EVENTOS</h1>
+  <p class="lead text-center display-4 mb-4 os-animation" data-os-animation="bounceInUp" data-os-animation-delay=".4s" style="font-family: Coolvetica;">que</p>
+  <p class="lead text-center display-4 mt-3 os-animation" data-os-animation="bounceInUp" data-os-animation-delay=".6s" style="font-family: AlKisah;" >Emocionan</p>
 </header>
 
 <section class="container mb-5 pt-5">
   <div class="row text-center">
-    <div class="col-lg-4 col-md-6 col-xs">
-      <a href="" class="d-block mb-4 h-100">
-        <img src="assets/img/services_image.jpg" alt="" class="img-fluid img-thumbnail">
+    <div class="col-lg-4 col-md-6 col-xs mb-4">
+      <a href="" class="d-block h-100">
+        <img src="assets/img/Thumbnail/services_image-650x350.jpg" alt="Eventrade" class="img-fluid os-animation" data-os-animation="fadeIn" data-os-animation-delay=".5s">
       </a>
     </div>
-    <div class="col-lg-4 col-md-6 col-xs">
-      <a href="" class="d-block mb-4 h-100">
-        <img src="assets/img/services_image.jpg" alt="" class="img-fluid img-thumbnail">
+    <div class="col-lg-4 col-md-6 col-xs mb-4">
+      <a href="" class="d-block h-100">
+        <img src="assets/img/Thumbnail/services_integration 650x350.jpg" alt="Eventrade" class="img-fluid os-animation" data-os-animation="fadeIn" data-os-animation-delay="1.5s">
       </a>
     </div>
-    <div class="col-lg-4 col-md-6 col-xs">
-      <a href="" class="d-block mb-4 h-100">
-        <img src="assets/img/services_image.jpg" alt="" class="img-fluid img-thumbnail">
+    <div class="col-lg-4 col-md-6 col-xs mb-4">
+      <a href="" class="d-block h-100">
+        <img src="assets/img/Thumbnail/services_building-650x350.jpg" alt="" class="img-fluid os-animation" data-os-animation="fadeIn" data-os-animation-delay="2.5s">
       </a>
     </div>
-    <div class="col-lg-4 col-md-6 col-xs">
-      <a href="" class="d-block mb-4 h-100">
-        <img src="assets/img/services_image.jpg" alt="" class="img-fluid img-thumbnail">
+    <div class="col-lg-4 col-md-6 col-xs mb-4">
+      <a href="" class="d-block h-100">
+        <img src="assets/img/Thumbnail/services_sports-650x350.jpg" alt="" class="img-fluid os-animation" data-os-animation="fadeIn" data-os-animation-delay="3.5s">
       </a>
     </div>
-    <div class="col-lg-4 col-md-6 col-xs">
-      <a href="" class="d-block mb-4 h-100">
-        <img src="assets/img/services_image.jpg" alt="" class="img-fluid img-thumbnail">
+    <div class="col-lg-4 col-md-6 col-xs mb-4">
+      <a href="" class="d-block h-100">
+        <img src="assets/img/Thumbnail/services_talents-650x350.jpg" alt="" class="img-fluid os-animation" data-os-animation="fadeIn" data-os-animation-delay="4.5s">
       </a>
     </div>
-    <div class="col-lg-4 col-md-6 col-xs">
-      <a href="" class="d-block mb-4 h-100">
-        <img src="assets/img/services_image.jpg" alt="" class="img-fluid img-thumbnail">
+    <div class="col-lg-4 col-md-6 col-xs mb-4">
+      <a href="" class="d-block h-100">
+        <img src="assets/img/Thumbnail/services_travel-650x350.jpg" alt="" class="img-fluid os-animation" data-os-animation="fadeIn" data-os-animation-delay="5.5s">
       </a>
     </div>
     
@@ -102,6 +105,9 @@
 <script src="js/popper.js"></script>
 <!-- Bootstrap JS -->
 <script src="js/bootstrap.min.js"></script>
+<!-- Animation Waypoints -->
+<script src="js/jquery.waypoints.min.js"></script>
+<script src="js/waypoints.js"></script>
 <!-- Ours Scripts -->
 <script src="js/index.js"></script>
 </body>
