Creating services gallery

--- a/index.html
+++ b/index.html
@@ -64,38 +64,28 @@
 </header>
 
 <section class="container mb-5 pt-5">
-  <div class="row text-center">
-    <div class="col-lg-4 col-md-6 col-xs mb-4">
-      <a href="" class="d-block h-100">
-        <img src="assets/img/Thumbnail/services_image-650x350.jpg" alt="Eventrade" class="img-fluid os-animation" data-os-animation="fadeIn" data-os-animation-delay=".5s">
+  <div class="row">
+    <div class="col-lg-4 col-md-6 col-xs hero-1">
+      <a href="www.google.com.pe" target="_blank">
+          <img src="../assets/img/Thumbnail/services_image-650x350.jpg" alt="services_image" class="img-fluid">
       </a>
     </div>
-    <div class="col-lg-4 col-md-6 col-xs mb-4">
-      <a href="" class="d-block h-100">
-        <img src="assets/img/Thumbnail/services_integration 650x350.jpg" alt="Eventrade" class="img-fluid os-animation" data-os-animation="fadeIn" data-os-animation-delay="1.5s">
-      </a>
+    <div class="col-lg-4 col-md-6 col-xs hero-2">
+      <img src="../assets/img/Thumbnail/services_integration-650x350.jpg" alt="services_integration" class="img-fluid">
     </div>
-    <div class="col-lg-4 col-md-6 col-xs mb-4">
-      <a href="" class="d-block h-100">
-        <img src="assets/img/Thumbnail/services_building-650x350.jpg" alt="" class="img-fluid os-animation" data-os-animation="fadeIn" data-os-animation-delay="2.5s">
-      </a>
+    <div class="col-lg-4 col-md-6 col-xs hero-3">
+        <img src="../assets/img/Thumbnail/services_building-650x350.jpg" alt="services_building" class="img-fluid">
     </div>
-    <div class="col-lg-4 col-md-6 col-xs mb-4">
-      <a href="" class="d-block h-100">
-        <img src="assets/img/Thumbnail/services_sports-650x350.jpg" alt="" class="img-fluid os-animation" data-os-animation="fadeIn" data-os-animation-delay="3.5s">
-      </a>
+    <div class="col-lg-4 col-md-6 col-xs hero-4">
+        <img src="../assets/img/Thumbnail/services_sports-650x350.jpg" alt="services_sports" class="img-fluid">
     </div>
-    <div class="col-lg-4 col-md-6 col-xs mb-4">
-      <a href="" class="d-block h-100">
-        <img src="assets/img/Thumbnail/services_talents-650x350.jpg" alt="" class="img-fluid os-animation" data-os-animation="fadeIn" data-os-animation-delay="4.5s">
-      </a>
+    <div class="col-lg-4 col-md-6 col-xs hero-5">
+        <img src="../assets/img/Thumbnail/services_talents-650x350.jpg" alt="services_talents" class="img-fluid">
     </div>
-    <div class="col-lg-4 col-md-6 col-xs mb-4">
-      <a href="" class="d-block h-100">
-        <img src="assets/img/Thumbnail/services_travel-650x350.jpg" alt="" class="img-fluid os-animation" data-os-animation="fadeIn" data-os-animation-delay="5.5s">
-      </a>
+    <div class="col-lg-4 col-md-6 col-xs hero-6">
+        <img src="../assets/img/Thumbnail/services_travel-650x350.jpg" alt="services_travel" class="img-fluid">
     </div>
-    
+    <div class="clearfix"></div>
   </div>
 </section>
 
