--- a/index.html
+++ b/index.html
@@ -58,34 +58,34 @@
 </nav>
 
 <header class="jumbotron paral paralsec d-flex flex-column justify-content-center">
-  <h1 class="text-center display-1 os-animation" data-os-animation="bounceInUp" data-os-animation-delay=".2s" style="font-family: AgencyFb;">EVENTOS</h1>
-  <p class="lead text-center display-4 mb-4 os-animation" data-os-animation="bounceInUp" data-os-animation-delay=".4s" style="font-family: Coolvetica;">que</p>
-  <p class="lead text-center display-4 mt-3 os-animation" data-os-animation="bounceInUp" data-os-animation-delay=".6s" style="font-family: AlKisah;" >Emocionan</p>
+  <h1 class="text-center display-1 wow bounceInUp" data-wow-delay=".2s" style="font-family: AgencyFb;">EVENTOS</h1>
+  <p class="lead text-center display-4 mb-4 wow bounceInUp" data-wow-delay=".4s" style="font-family: Coolvetica;">que</p>
+  <p class="lead text-center display-4 mt-3 wow bounceInUp" data-wow-delay=".6s" style="font-family: AlKisah;" >Emocionan</p>
 </header>
 
 <section class="container mb-5 pt-5">
   <div class="row">
-    <div class="col-lg-4 col-md-6 col-xs hero-1">
+    <div class="col-lg-4 col-md-6 col-xs hero-1 wow fadeIn" data-wow-delay=".5s">
       <a href="www.google.com.pe" target="_blank">
           <img src="../assets/img/Thumbnail/services_image-650x350.jpg" alt="services_image" class="img-fluid">
       </a>
     </div>
-    <div class="col-lg-4 col-md-6 col-xs hero-2">
+    <div class="col-lg-4 col-md-6 col-xs hero-2 wow fadeIn" data-wow-delay="1s">
       <img src="../assets/img/Thumbnail/services_integration-650x350.jpg" alt="services_integration" class="img-fluid">
     </div>
-    <div class="col-lg-4 col-md-6 col-xs hero-3">
+    <div class="col-lg-4 col-md-6 col-xs hero-3 wow fadeIn" data-wow-delay="1.5s">
         <img src="../assets/img/Thumbnail/services_building-650x350.jpg" alt="services_building" class="img-fluid">
     </div>
-    <div class="col-lg-4 col-md-6 col-xs hero-4">
+    <div class="col-lg-4 col-md-6 col-xs hero-4 wow fadeIn" data-wow-delay="2s">
         <img src="../assets/img/Thumbnail/services_sports-650x350.jpg" alt="services_sports" class="img-fluid">
     </div>
-    <div class="col-lg-4 col-md-6 col-xs hero-5">
+    <div class="col-lg-4 col-md-6 col-xs hero-5 wow fadeIn" data-wow-delay="2.5s">
         <img src="../assets/img/Thumbnail/services_talents-650x350.jpg" alt="services_talents" class="img-fluid">
     </div>
-    <div class="col-lg-4 col-md-6 col-xs hero-6">
+    <div class="col-lg-4 col-md-6 col-xs hero-6 wow fadeIn" data-wow-delay="3s">
         <img src="../assets/img/Thumbnail/services_travel-650x350.jpg" alt="services_travel" class="img-fluid">
     </div>
-    <div class="clearfix"></div>
+    <!-- <div class="clearfix"></div> -->
   </div>
 </section>
 
@@ -95,9 +95,8 @@
 <script src="js/popper.js"></script>
 <!-- Bootstrap JS -->
 <script src="js/bootstrap.min.js"></script>
-<!-- Animation Waypoints -->
-<script src="js/jquery.waypoints.min.js"></script>
-<script src="js/waypoints.js"></script>
+<!-- Animation Library -->
+<script src="js/wow.min.js"></script>
 <!-- Ours Scripts -->
 <script src="js/index.js"></script>
 </body>
