Adding Team Section

--- a/index.html
+++ b/index.html
@@ -89,6 +89,18 @@
   </div>
 </section>
 
+<section class="container-fluid">
+  <div class="row team-section">
+   <div class="col-9 col-sm-7 col-md-6 col-lg-5 align-self-end team-item text-right mb-4">
+     <p>"Trabajamos con personas con ideas excepcionales capaces de marcar tendencias.</p>
+     <p>Nuestros colaboradores producen eventos que emocionan, inspiran y crean soluciones efectivas de comunicación."</p>
+     <h2 class="text-right">Aracelli Ulloa</h2>
+     <span>Gerente General</span>
+   </div>
+  </div>
+</section>
+
+
 <!-- JQuery -->
 <script src="js/jquery-3.2.1.min.js"></script>
 <!-- Pooper JS -->
