Adding trasnitions to Team Section

--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
 
 <section class="container-fluid">
   <div class="row team-section">
-   <div class="col-9 col-sm-7 col-md-6 col-lg-5 align-self-end team-item text-right mb-4">
-     <p>"Trabajamos con personas con ideas excepcionales capaces de marcar tendencias.</p>
-     <p>Nuestros colaboradores producen eventos que emocionan, inspiran y crean soluciones efectivas de comunicación."</p>
-     <h2 class="text-right">Aracelli Ulloa</h2>
-     <span>Gerente General</span>
+   <div class="col-9 col-sm-7 col-md-5 col-lg-4 align-self-end team-item text-right mb-4 wow slideInLeft">
+     <p class="pl-4 pt-3 pb-1">"Trabajamos con personas con ideas excepcionales capaces de marcar tendencias.
+     Nuestros colaboradores producen eventos que emocionan, inspiran y crean soluciones efectivas de comunicación."</p>
+     <h3 class="text-right">Aracelli Ulloa</h3>
+     <h5>Gerente General</h5>
    </div>
   </div>
 </section>
