--- a/public/index.html
+++ b/public/index.html
@@ -89,6 +89,18 @@
   </div>
 </section>
 
+<section class="container-fluid">
+  <div class="row team-section">
+   <div class="col-9 col-sm-7 col-md-5 col-lg-4 align-self-end team-item text-right mb-4 wow slideInLeft">
+     <p class="pl-4 pt-3 pb-1">"Trabajamos con personas con ideas excepcionales capaces de marcar tendencias.
+     Nuestros colaboradores producen eventos que emocionan, inspiran y crean soluciones efectivas de comunicación."</p>
+     <h3 class="text-right">Aracelli Ulloa</h3>
+     <h5>Gerente General</h5>
+   </div>
+  </div>
+</section>
+
+
 <!-- JQuery -->
 <script src="js/jquery-3.2.1.min.js"></script>
 <!-- Pooper JS -->
