--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@
 </header>
 
 <section class="container mb-5 pt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-4">
+      <p class="service_title">
+        Nuestros Servicios
+      </p>
+    </div>
+  </div>
   <div class="row">
     <div class="col-lg-4 col-md-6 col-xs hero-1 wow fadeIn" data-wow-delay=".5s">
       <a href="www.google.com.pe" target="_blank">
