--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
   <p class="lead text-center display-4 mt-3 wow bounceInUp" data-wow-delay=".6s" style="font-family: AlKisah;" >Emocionan</p>
 </header>
 
-<section class="container mb-5 pt-5">
+<section class="container mb-5 pt-5 services_section">
   <div class="row justify-content-center">
     <div class="col-md-4">
       <p class="service_title">
@@ -72,24 +72,24 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-lg-4 col-md-6 col-xs hero-1 wow fadeIn" data-wow-delay=".5s">
+    <div class="col-lg-6 col-md-6 col-xs hero-1 wow fadeIn" data-wow-delay=".5s">
       <a href="www.google.com.pe" target="_blank">
           <img src="../assets/img/Thumbnail/services_image-650x350.jpg" alt="services_image" class="img-fluid">
       </a>
     </div>
-    <div class="col-lg-4 col-md-6 col-xs hero-2 wow fadeIn" data-wow-delay="1s">
+    <div class="col-lg-6 col-md-6 col-xs hero-2 wow fadeIn" data-wow-delay="1s">
       <img src="../assets/img/Thumbnail/services_integration-650x350.jpg" alt="services_integration" class="img-fluid">
     </div>
-    <div class="col-lg-4 col-md-6 col-xs hero-3 wow fadeIn" data-wow-delay="1.5s">
+    <div class="col-lg-6 col-md-6 col-xs hero-3 wow fadeIn" data-wow-delay="1.5s">
         <img src="../assets/img/Thumbnail/services_building-650x350.jpg" alt="services_building" class="img-fluid">
     </div>
-    <div class="col-lg-4 col-md-6 col-xs hero-4 wow fadeIn" data-wow-delay="2s">
+    <div class="col-lg-6 col-md-6 col-xs hero-4 wow fadeIn" data-wow-delay="2s">
         <img src="../assets/img/Thumbnail/services_sports-650x350.jpg" alt="services_sports" class="img-fluid">
     </div>
-    <div class="col-lg-4 col-md-6 col-xs hero-5 wow fadeIn" data-wow-delay="2.5s">
+    <div class="col-lg-6 col-md-6 col-xs hero-5 wow fadeIn" data-wow-delay="2.5s">
         <img src="../assets/img/Thumbnail/services_talents-650x350.jpg" alt="services_talents" class="img-fluid">
     </div>
-    <div class="col-lg-4 col-md-6 col-xs hero-6 wow fadeIn" data-wow-delay="3s">
+    <div class="col-lg-6 col-md-6 col-xs hero-6 wow fadeIn" data-wow-delay="3s">
         <img src="../assets/img/Thumbnail/services_travel-650x350.jpg" alt="services_travel" class="img-fluid">
     </div>
     <!-- <div class="clearfix"></div> -->
@@ -97,14 +97,25 @@
 </section>
 
 <section class="container-fluid">
-  <div class="row team-section">
-   <div class="col-9 col-sm-7 col-md-5 col-lg-4 align-self-end team-item text-right mb-4 wow slideInLeft">
+  <!-- Desktop Team Section -->
+  <div class="row tm-section d-none d-sm-flex">
+   <div class="col-9 col-sm-7 col-md-5 col-lg-4 align-self-end tm-item text-right mb-4 wow slideInLeft">
      <p class="pl-4 pt-3 pb-1">"Trabajamos con personas con ideas excepcionales capaces de marcar tendencias.
      Nuestros colaboradores producen eventos que emocionan, inspiran y crean soluciones efectivas de comunicación."</p>
      <h3 class="text-right">Aracelli Ulloa</h3>
      <h5>Gerente General</h5>
    </div>
   </div>
+
+  <!-- Mobile Team Seaction -->
+  <div class="row tm-section-mb d-sm-none d-flex">
+      <div class="col-9 col-sm-7 col-md-5 col-lg-4 align-self-end tm-item text-right mb-4 wow slideInLeft">
+        <p class="pl-4 pt-3 pb-1">"Trabajamos con personas con ideas excepcionales capaces de marcar tendencias.
+        Nuestros colaboradores producen eventos que emocionan, inspiran y crean soluciones efectivas de comunicación."</p>
+        <h3 class="text-right">Aracelli Ulloa</h3>
+        <h5>Gerente General</h5>
+      </div>
+     </div>
 </section>
 
 
