--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
    
     <!-- Navbar Brand -->
     <a href="#page-top" class="navbar-brand">
-      <img src="assets/img/Logo_mobile.png" alt="" class="d-inline-block align-top" width="150" height="33">
+      <img src="assets/img/Logo_mobile.png" alt="" class="d-inline-block align-top" width="150" height="40">
     </a>
     
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -127,16 +127,21 @@
       <p class="mb-0 root_title">Nuestros Clientes</p>
     </div>
   </div>
-  <div class="row">
+  <div class="row d-none d-sm-flex">
       <div class="col clients-item">
           <img class="img img-fluid" src="./assets/img/LocoClientes.jpg" alt="">
-        </div>
+      </div>
+  </div>
+  <div class="row d-sm-none d-flex">
+    <div class="col clients-item">
+        <img class="img img-fluid" src="./assets/img/LocoClientesMobil.jpg" alt="">
+    </div>
   </div>
 </section>
 
-<section class="container-fluid">
-  <div class="row">
-    <form action="" class="col-12 col-md-6 bg-dark-blue d-flex flex-column align-items-center">
+<section class="container-fluid"  id="contact">
+  <div class="row contact-section">
+    <form action="" class="col-12 col-md-6 bg-dark-blue d-flex flex-column align-items-center justify-content-center">
       <legend class="mb-1 mt-3 text-center contact-title">CONTÁCTANOS</legend>
 
       <div class="input-group mb-3">
@@ -159,8 +164,8 @@
       </div>
 
       <div class="input-group btn-send mb-3">
-          <span class="input-group-addon"><i class="fa fa-rocket fa-fw"></i></span>
-        <input type="submit" id="phone" class="form-control btn-primary btn-item-send" placeholder="Telefono">
+        <span class="input-group-addon"><i class="fa fa-rocket fa-fw"></i></span>
+        <input type="submit" value ="Enviar Consulta" class="form-control btn-primary btn-item-send justify-content-center">
       </div>
     </form>
     
