--- a/index.html
+++ b/index.html
@@ -169,11 +169,17 @@
       </div>
     </form>
     
-    <div class="col-12 col-md-6 bg-dark">
-      
+    <div class="col-12 col-md-6 p-0 d-flex justify-content-center align-items-center bg-gradient">
+        <div class="col-6 text-center contact-frase">
+            <p class="pt-2 pb-2">DISEÑAMOS EVENTOS QUE <span class="span-blue">CONECTAN, </span><span class="span-dark-yellow">INSPIRAN, </span><span class="span-dark-purple">GENERAN </span>RESULTADOS. </p>
+        </div>
     </div>
   </div>
 </section>
+
+<footer class="container">
+
+</footer>
 
 <!-- JQuery -->
 <script src="js/jquery-3.2.1.min.js"></script>
